Changes in 3.3.9
2012-MM-DD

- Bug fixes / improvements
    - Fix area boundary return from GEOSPointOnSurface (#623)
    - Speedup GEOSWKBReader_read (#621)
    - Fix RobustLineIntersector handling of invalid intersection points (#622)

Changes in 3.3.8
2013-02-28

- Bug fixes / improvements
    - IsValidOp: throw proper error on nested shells (#608)
    - Fix header guards (#617, #618, #619)
    - WKTWriter::appendCoordinate optimisation
    - Fix centroid computation for collections with empty components (#582)

Changes in 3.3.7
2013-01-22 

- Bug fixes / improvements
    - Fix abort in RightmostEdgeFinder (#605)
    - Do not force precision reduction below 6 significant digits
      while trying to obtain a valid Buffer output (#605)
    - Fix GEOSPointOnSurface with zero-length linestring (#609)
    - Fix EMPTY return from zero-area polygon (#613)
    - Segfault from symdifference (#615)

Changes in 3.3.6
2012-11-15 -- that's Post-GIS day !

- Bug fixes / improvements
    - Add support for testing with phpunit 3.6 (not loosing support for 3.4)
    - Segfault from intersection (#586, #598, #599)

Changes in 3.3.5
2012-06-25

- Bug fixes / improvements
    - Correctly increment CAPI lib version from 3.3.3 (#558)
    - Port robustness fix to CentroidArea (#559)
    - Always return POINT from GEOSGetCentroid, even for EMPTY (#560)
    - Always return POINT from GEOSPointOnSurface, even for EMPTY (#561)

Changes in 3.3.4
2012-05-31

- Bug fixes / improvements
    - Do not abort on NaN overlay input (#530)
    - Reduce CommonBitsRemover harmful effects during overlay op (#527)
    - Better cross-compiler support (#534)
    - Enable overlay ops short-circuits (#542)
    - Envelope-based short-circuit for symDifference (#543)
    - Fix support for PHP 5.4 (#513)
    - Fix TopologyPreservingSimplifier invalid output on closed line (#508)
    - Reduce calls to ptNotInList, greatly speeding up Polygonizer (#545)

Changes in 3.3.3
2012-04-01

- Bug fixes / improvements