@@ -147,6 +147,11 @@ private:
 			geom::CoordinateList::iterator from,
 			geom::CoordinateList::iterator too_far);
 
+	geom::CoordinateList::iterator findVertexToSnap(
+			const geom::Coordinate& snapPt,
+			geom::CoordinateList::iterator from,
+			geom::CoordinateList::iterator too_far);
+
     // Declare type as noncopyable
     LineStringSnapper(const LineStringSnapper& other);
     LineStringSnapper& operator=(const LineStringSnapper& rhs);
