@@ -16,6 +16,9 @@
  *
  * Last port: operation/overlay/snap/LineStringSnapper.java r320 (JTS-1.12)
  *
+ * NOTE: algorithm changed to improve output quality by reducing 
+ *       probability of self-intersections
+ *
  **********************************************************************/
 
 #include <geos/operation/overlay/snap/LineStringSnapper.h>
@@ -34,6 +37,7 @@
 
 #if GEOS_DEBUG
 #include <iostream>
+#include <iomanip>
 using std::cerr;
 using std::endl;
 #endif
@@ -59,6 +63,53 @@ LineStringSnapper::snapTo(const geom::Coordinate::ConstVect& snapPts)
 }
 
 /*private*/
+CoordinateList::iterator
+LineStringSnapper::findVertexToSnap(
+			const Coordinate& snapPt,
+			CoordinateList::iterator from,
+			CoordinateList::iterator too_far)
+{
+	double minDist = snapTolerance; // make sure the first closer then
+	                                // snapTolerance is accepted
+	CoordinateList::iterator match=too_far;
+
+	for ( ; from != too_far; ++from)
+	{
+    Coordinate& c0 = *from;
+
+#if GEOS_DEBUG
+cerr << " Checking vertex " << c0 << endl;
+#endif
+
+		double dist = c0.distance(snapPt);
+		if ( dist >= minDist) {
+#if GEOS_DEBUG
+cerr << "   snap point distance " << dist
+     << " not smaller than tolerance "
+     << snapTolerance << " or previous closest "
+     << minDist << endl;
+#endif
+      continue;
+    }
+
+#if GEOS_DEBUG
+    cerr << "   snap point distance " << dist << " within tolerance "
+         << snapTolerance << " and closer than previous candidate "
+         << minDist << endl;
+#endif
+
+    if ( dist == 0.0 ) return from; // can't find any closer
+
+    match = from;
+    minDist = dist;
+
+	}
+
+	return match;
+}
+
+/*private*/
+#if 0 // changed to start looping from snap points
 void
 LineStringSnapper::snapVertices(geom::CoordinateList& srcCoords,
 			const geom::Coordinate::ConstVect& snapPts)
@@ -66,7 +117,7 @@ LineStringSnapper::snapVertices(geom::CoordinateList& srcCoords,
   if ( srcCoords.empty() ) return;
 
 #if GEOS_DEBUG
-cerr << "Snapping vertices of: " << srcCoords << endl;
+cerr << "Snapping vertices of: " << std::setprecision(15) << srcCoords << endl;
 #endif
 
 	using geom::CoordinateList;
@@ -98,6 +149,18 @@ cerr << " no snap found" << endl;
 
 		assert(*found);
 		const Coordinate& snapPt = *(*found);
+
+#if 1
+    // Check if closest vertex for found snap is ourselves ?
+    CoordinateList::iterator vertpos = findVertexToSnap(snapPt, srcCoords.begin(), srcCoords.end());
+    if ( vertpos != it ) {
+#if GEOS_DEBUG
+cerr << " Snap found but it has a vertex point closer than this one" << endl;
+      continue;
+#endif
+    }
+#endif
+
 		
 #if GEOS_DEBUG
 cerr << " found snap point " << snapPt << endl;
@@ -117,15 +180,88 @@ cerr << " source point became " << srcPt << endl;
 		}
 	}
 }
+#endif
+
+#if 1
+/*private*/
+void
+LineStringSnapper::snapVertices(geom::CoordinateList& srcCoords,
+			const geom::Coordinate::ConstVect& snapPts)
+{
+  // nothing to do if there are no source coords..
+  if ( srcCoords.empty() ) return;
+
+#if GEOS_DEBUG
+cerr << "Snapping vertices of: " << srcCoords << endl;
+#endif
+
+	for ( Coordinate::ConstVect::const_iterator
+			it=snapPts.begin(), end=snapPts.end();
+			it != end;
+			++it)
+	{
+		assert(*it);
+		const Coordinate& snapPt = *(*it);
+
+#if GEOS_DEBUG
+cerr << "Checking for a vertex to snap to snapPt " << snapPt << endl;
+#endif
+
+		CoordinateList::iterator too_far = srcCoords.end();
+    if ( isClosed ) --too_far;
+		CoordinateList::iterator vertpos =
+			findVertexToSnap(snapPt, srcCoords.begin(), too_far);
+		if ( vertpos == too_far)
+		{
+#if GEOS_DEBUG
+cerr << " No vertex to snap" << endl;
+#endif
+			continue;
+		}
+
+#if 0
+    // Check if closest snap for found vertex is ourselves ?
+    Coordinate::ConstVect::const_iterator snappos =
+        findSnapForVertex(*vertpos, snapPts);
+    if ( snappos != it ) {
+#if GEOS_DEBUG
+cerr << " Vertex found but it has a snap point closer than this one" << endl;
+      continue;
+#endif
+    }
+#endif
+
+#if GEOS_DEBUG
+cerr << " Vertex to be snapped found, snapping" << endl;
+#endif
+    *vertpos = snapPt;
+
+    // keep final closing point in synch (rings only)
+    if (vertpos == srcCoords.begin() && isClosed)
+    {
+      vertpos = srcCoords.end(); --vertpos;
+      *vertpos = snapPt;
+    }
+
+	}
+
+#if GEOS_DEBUG
+cerr << " After vertex snapping, srcCoors are: " << srcCoords << endl;
+#endif
+
+}
+#endif
 
 /*private*/
 Coordinate::ConstVect::const_iterator
 LineStringSnapper::findSnapForVertex(const Coordinate& pt,
 			const Coordinate::ConstVect& snapPts)
 {
+	Coordinate::ConstVect::const_iterator end = snapPts.end();
+	Coordinate::ConstVect::const_iterator candidate = end;
+	double minDist;
 
 	// TODO: use std::find_if
-	Coordinate::ConstVect::const_iterator end=snapPts.end();
 	for ( Coordinate::ConstVect::const_iterator
 			it=snapPts.begin();
 			it != end;
@@ -134,14 +270,12 @@ LineStringSnapper::findSnapForVertex(const Coordinate& pt,
 		assert(*it);
 		const Coordinate& snapPt = *(*it);
 
-		// shouldn't we look for *all* segments to be snapped rather then a single one?
 		if ( snapPt.equals2D(pt) )
 		{
 #if GEOS_DEBUG
 cerr << " points are equal, returning not-found " << endl;
 #endif
 			return end;
-			//continue;
 		}
 
 		double dist = snapPt.distance(pt);
@@ -151,18 +285,20 @@ cerr << " distance from snap point " << snapPt << ": " << dist << endl;
 
 		if ( dist < snapTolerance )
 		{
-#if GEOS_DEBUG
-cerr << " snap point within tolerance, returning iterator to it" << endl;
-#endif
-			return it;
+      if ( candidate == end || dist < minDist ) {
+        minDist = dist;
+        candidate = it;
+      }
 		}
 	}
 
 #if GEOS_DEBUG
+  if ( candidate == end ) {
 cerr << " no snap point within distance, returning not-found" << endl;
+  }
 #endif
 
-	return end;
+	return candidate;
 }
 
 
@@ -191,8 +327,6 @@ cerr << "Snapping segments of: " << srcCoords << endl;
 cerr << "Checking for a segment to snap to snapPt " << snapPt << endl;
 #endif
 
-		// shouldn't we look for *all* segments to be snapped
-		// rather then a single one?
 		CoordinateList::iterator too_far = srcCoords.end(); --too_far;
 		CoordinateList::iterator segpos =
 			findSegmentToSnap(snapPt, srcCoords.begin(), too_far);
@@ -203,12 +337,113 @@ cerr << " No segment to snap" << endl;
 #endif
 			continue;
 		}
+
+    /* Check if the snap point falls outside of the segment */
+    // If the snap point is outside, this means that an endpoint
+    // was not snap where it should have been
+    // so what we should do is re-snap the endpoint to this
+    // snapPt and then snap the closest between this and
+    // previous (for pf < 0.0) or next (for pf > 1.0) segment
+    // to the old endpoint.
+    //     --strk May 2013
+    //
+    // TODO: simplify this code, make more readable
+    //
+    CoordinateList::iterator to = segpos; ++to;
+    LineSegment seg(*segpos, *to);
+    double pf = seg.projectionFactor(snapPt);
+    if ( pf > 1.0 ) {
 #if GEOS_DEBUG
-cerr << " Segment to be snapped found, inserting point" << endl;
+      cerr << " Segment to be snapped is closer on his end point" << endl;
 #endif
-		// insert must happen one-past first point (before next point)
-		++segpos;
-		srcCoords.insert(segpos, snapPt);
+      Coordinate newSnapPt = seg.p1;
+      *to = seg.p1 = snapPt;
+      // now snap from-to (segpos) or to-next (segpos++) to newSnapPt
+      if ( to == too_far ) {
+        if ( isClosed ) { 
+#if GEOS_DEBUG
+          cerr << " His end point is the last one, but is closed " << endl;
+#endif
+          *(srcCoords.begin()) = snapPt; // sync to start point
+          to = srcCoords.begin();
+        } else {
+#if GEOS_DEBUG
+          cerr << " His end point is the last one, inserting " << newSnapPt << " before it" << endl;
+#endif
+          srcCoords.insert(to, newSnapPt);
+          continue;
+        }
+      }
+      ++to;
+      LineSegment nextSeg(seg.p1, *to);
+      if ( nextSeg.distance(newSnapPt) < seg.distance(newSnapPt) ) {
+#if GEOS_DEBUG
+        cerr << " Next segment closer, inserting " << newSnapPt << " into " << nextSeg << endl;
+#endif
+        // insert into next segment
+        srcCoords.insert(to, newSnapPt);
+      } else {
+#if GEOS_DEBUG
+        cerr << " This segment closer, inserting " << newSnapPt << " into " << seg << endl;
+#endif
+        // insert must happen one-past first point (before next point)
+        ++segpos;
+        srcCoords.insert(segpos, newSnapPt);
+      }
+    }
+    else if ( pf < 0.0 ) {
+#if GEOS_DEBUG
+      cerr << " Segment to be snapped is closer on his start point" << endl;
+#endif
+      Coordinate newSnapPt = seg.p0;
+      *segpos = seg.p0 = snapPt;
+      // now snap prev-from (--segpos) or from-to (segpos) to newSnapPt
+      if ( segpos == srcCoords.begin() ) {
+        if ( isClosed ) { 
+#if GEOS_DEBUG
+          cerr << " His start point is the first one, but is closed " << endl;
+#endif
+          segpos = srcCoords.end(); --segpos;
+          *segpos = snapPt; // sync to end point
+        } else {
+#if GEOS_DEBUG
+          cerr << " His start point is the first one, inserting " << newSnapPt << " before it" << endl;
+#endif
+          ++segpos;
+          srcCoords.insert(segpos, newSnapPt);
+          continue;
+        }
+      }
+
+#if GEOS_DEBUG
+cerr << " Before seg-snapping, srcCoors are: " << srcCoords << endl;
+#endif
+
+      --segpos;
+      LineSegment prevSeg(*segpos, seg.p0);
+      if ( prevSeg.distance(newSnapPt) < seg.distance(newSnapPt) ) {
+#if GEOS_DEBUG
+        cerr << " Prev segment closer, inserting " << newSnapPt << " into " << prevSeg << endl;
+#endif
+        // insert into prev segment
+        srcCoords.insert(segpos, newSnapPt);
+      } else {
+#if GEOS_DEBUG
+        cerr << " This segment closer, inserting " << newSnapPt << " into " << seg << endl;
+#endif
+        // insert must happen one-past first point (before next point)
+        srcCoords.insert(to, newSnapPt);
+      }
+    }
+    else {
+      assert(pf != 0.0);
+#if GEOS_DEBUG
+cerr << " Segment to be snapped found, projection factor is " << pf << ", inserting point" << endl;
+#endif
+      // insert must happen one-past first point (before next point)
+      ++segpos;
+      srcCoords.insert(segpos, snapPt);
+    }
 	}
 
 #if GEOS_DEBUG
@@ -226,8 +461,8 @@ LineStringSnapper::findSegmentToSnap(
 			CoordinateList::iterator too_far)
 {
 	LineSegment seg;
-	double minDist = snapTolerance+1; // make sure the first closer then
-	                                  // snapTolerance is accepted
+	double minDist = snapTolerance; // make sure the first closer then
+	                                // snapTolerance is accepted
 	CoordinateList::iterator match=too_far;
 
 	// TODO: use std::find_if
@@ -267,30 +502,27 @@ cerr << "   snap point matches a segment endpoint, giving up seek" << endl;
 		}
 
 		double dist = seg.distance(snapPt);
-		if ( dist < snapTolerance ) {
-      if ( dist < minDist ) {
+		if ( dist >= minDist) {
 #if GEOS_DEBUG
-cerr << "   snap point distance " << dist << " within tolerance "
-     << snapTolerance << " and closer than previous candidate " << minDist
-     << endl;
+cerr << "   snap point distance " << dist
+     << " not smaller than tolerance "
+     << snapTolerance << " or previous closest "
+     << minDist << endl;
 #endif
-        match = from;
-        minDist = dist;
-      }
-#if GEOS_DEBUG
-      else {
-cerr << "   snap point distance " << dist << " within tolerance "
-     << snapTolerance << " but not closer than previous candidate " << minDist
-     << endl;
-      }
-#endif
+      continue;
     }
+
 #if GEOS_DEBUG
-    else {
-cerr << "   snap point distance " << dist << " bigger than tolerance "
-     << snapTolerance << endl;
-    }
+    cerr << "   snap point distance " << dist << " within tolerance "
+         << snapTolerance << " and closer than previous candidate "
+         << minDist << endl;
 #endif
+
+    if ( dist == 0.0 ) return from; // can't find any closer
+
+    match = from;
+    minDist = dist;
+
 	}
 
 	return match;
