@@ -5,6 +5,7 @@ Changes in 3.3.9
     - Fix area boundary return from GEOSPointOnSurface (#623)
     - Speedup GEOSWKBReader_read (#621)
     - Fix RobustLineIntersector handling of invalid intersection points (#622)
+    - Reduce likelyhood of invalid output from snap operation (#629, #501)
 
 Changes in 3.3.8
 2013-02-28
